--- a/spec/spec.dom.html
+++ b/spec/spec.dom.html
@@ -2,6 +2,7 @@
 	<head>
 		<link type="text/css" rel="stylesheet" href="/Library/Ruby/Gems/1.8/gems/visionmedia-jspec-2.11.2/lib/jspec.css" />
 		<script src="/Library/Ruby/Gems/1.8/gems/visionmedia-jspec-2.11.2/lib/jspec.js"></script>
+		<script src="/Library/Ruby/Gems/1.8/gems/visionmedia-jspec-2.11.2/lib/growl.js"></script>
 		<script src="../../underscore/underscore.js"></script>
 		<script src="../lib/pubsub.hottub.js"></script>
 		<script>
